--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "woodruff": "git+https://github.com/fs-webdev/woodruff.git",
     "frontier-build-tools": "git+https://github.com/fs-webdev/frontier-build-tools.git",
     "startup": "~0.1.12",
-    "http-error": "git+https://github.com/misbach/node-http-error.git"
+    "http-error": "git+https://github.com/misbach/node-http-error.git",
+    "simple-http-proxy": "~0.5.6"
   },
   "devDependencies": {
     "should": "~1.2.2",
